GN: Boolean doesent respect material index #102522

Closed
opened 2022-11-15 09:14:56 +01:00 by Blake · 12 comments

System Information
Operating system: Linux-6.0.8-arch1-1-x86_64-with-glibc2.36 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 520.56.06

Blender Version
Broken: version: 3.4.0 Beta, branch: master, commit date: 2022-11-15 07:07, hash: 5be3a68f58
Worked in 3.3 version.

Changed in f1c0249f34

Short description of error
GN: Boolean doesent respect material index when set via GN Set Material

Exact steps for others to reproduce the error
Please check attachment. GN_boolean_materials.blend

**System Information** Operating system: Linux-6.0.8-arch1-1-x86_64-with-glibc2.36 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 520.56.06 **Blender Version** Broken: version: 3.4.0 Beta, branch: master, commit date: 2022-11-15 07:07, hash: `5be3a68f58` Worked in 3.3 version. Changed in f1c0249f34 **Short description of error** GN: Boolean doesent respect material index when set via GN Set Material **Exact steps for others to reproduce the error** Please check attachment. [GN_boolean_materials.blend](https://archive.blender.org/developer/F13916184/GN_boolean_materials.blend)
Author

Added subscriber: @dearzhen-3

Added subscriber: @dearzhen-3

Added subscriber: @costa

Added subscriber: @costa

You sure it worked in 3.3?

You sure it worked in 3.3?
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm.

Will bisect tomorrow if nobody investigates before that :)

Thanks for the report. I can confirm. Will bisect tomorrow if nobody investigates before that :)
Member

Checking now...

Checking now...
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed in f1c0249f34
cc @HooglyBoogly

Changed in f1c0249f34 cc @HooglyBoogly
Hans Goudey self-assigned this 2022-11-21 19:06:37 +01:00
Member

Thanks for the report. This is a tricky area (see #99592), but part of the issue is obvious so I'll commit that one right now.

I think I get the issue here since I've been trying to fix this issue for a while, but as a note for future reports and triaging, this report is missing a description of the expected behavior.

Thanks for the report. This is a tricky area (see #99592), but part of the issue is obvious so I'll commit that one right now. I think I get the issue here since I've been trying to fix this issue for a while, but as a note for future reports and triaging, this report is missing a description of the expected behavior.

This issue was referenced by b53c4fa8da

This issue was referenced by b53c4fa8daa199a8ccd4080baf2267c82d8b69a8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102522
No description provided.