Fix T102522: Geometry nodes boolean doesent respect material index

The refactor in f1c0249f34c417 incorrectly placed the material index
remapping before the transfer of generic attributes. Now that the
material index is a generic attribute, it was overwritten.